--- a/app/globals.css
+++ b/app/globals.css
@@ -3,31 +3,279 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --font-color: #313131;
+  --bg-color: #EBF8FF;
+  --city-name-font: "Tilt Neon", sans-serif;
+  --temperature-font: "Inter", sans-serif;
+  --time-font: "Inter", sans-serif;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+    --font-color: white;
+    --bg-color: #051923;
   }
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  color: var(--font-color);
+  background-color: var(--bg-color);
 }
 
 @layer utilities {
   .text-balance {
     text-wrap: balance;
   }
+}
+
+h1 {
+  font-family: var(--city-name-font);
+}
+
+h2 {
+  font-family: var(--temperature-font);
+}
+
+h3 {
+  font-family: var(--time-font);
+}
+
+.city {
+  position: relative;
+}
+
+.cityContainer {
+  position: relative;
+  overflow-x: hidden;
+  overflow-y: visible;
+  padding: 20px;
+  border-bottom-left-radius: 36px;
+  padding-top: 80px;
+}
+
+.cityName, .cityTemp {
+  width: 100%;
+  text-align: center;
+}
+
+.cityName {
+  font-size: 48px;
+}
+
+.cityTemp {
+  font-size: 84px;
+}
+
+.cityTempDetails {
+  text-align: center;
+  opacity: .9;
+}
+
+.cityTempDetails div {
+  width: 30%;
+}
+
+.cityTempDetails h4 {
+  font-size: 24px;
+  margin-top: -10px;
+}
+
+.cityTempDetails h5 {
+  font-size: 16px;
+}
+
+.cityWeather {
+  height: 280px;
+  position: absolute;
+  bottom: 0;
+  right: -50px;
+}
+
+.cityTime {
+  font-size: 52px;
+  position: absolute;
+  bottom: 20px;
+  left: 25px;
+}
+
+.cityTime h2 {
+  font-size: 16px;
+  line-height: 0;
+}
+
+.weatherDetailsLeft {
+  border-top-right-radius: 36px;
+  padding: 20px;
+}
+
+.weatherDetailsLeft div {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  width: 50%;
+  height: 45%;
+}
+
+.weatherDetailsLeft img {
+  height: 80px;
+  width: 80px;
+  margin: auto;
+  margin-top: -5px;
+}
+
+.weatherDetailsLeft h2 {
+  font-family: var(--city-name-font);
+  font-size: 18px;
+  opacity: .75;
+}
+
+.weatherDetailsLeft h3 {
+  text-transform: capitalize;
+  font-size: 12px;
+  opacity: .5;
+}
+
+.weatherDetailsRight {
+  opacity: .9;
+}
+
+.weatherDetailsRight h5 {
+  font-size: 14px;
+}
+
+.weatherDetailsRight div {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.showSideBar {
+  position: absolute;
+  top: 30px;
+  left: 30px;
+  z-index: 99;
+}
+
+.sidebar {
+  z-index: 99999;
+  background-color: var(--bg-color);
+  width: 80%;
+  max-width: 344px;
+  box-shadow: 10px 0px 20px black;
+}
+
+.sidebar-header {
+  color: var(--font-color);
+  height: 10%;
+  font-size: 38px;
+}
+
+.sidebarLogo {
+  font-family: "Reem Kufi Fun", sans-serif;
+}
+
+.sidebar-content {
+  height: 84%;
+  margin: 0 8px;
+  overflow-y: auto;
+}
+
+.cityCard {
+  width: 100%;
+  min-height: 150px;
+  max-height: 150px;
+  border-radius: 36px;
+  margin-top: 20px;
+  color: white;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+}
+
+.cityCardContainer {
+  position: relative;
+  box-sizing: border-box;
+  width: 100%;
+  height: 100%;
+}
+
+.cityCard h1 {
+  font-size: 32px;
+  width: 60%;
+  line-height: 42px;
+  overflow-wrap: break-word;
+  position: absolute;
+  top: 10px;
+  left: 20px;
+  text-align: left;
+}
+
+.cityCard h2 {
+  font-size: 36px;
+  position: absolute;
+  bottom: 10px;
+  right: 20px;
+  text-align: right;
+}
+
+.cityCard h3 {
+  font-size: 32px;
+  position: absolute;
+  bottom: 10px;
+  left: 20px;
+  text-align: left;
+}
+
+.cityCard .cityWeatherIcon {
+  width: 125px;
+  height: 125px;
+  position: absolute;
+  top: -25px;
+  right: 0;
+  background-position: center center;
+}
+
+.addCity {
+  color: var(--bg-color);
+  background-color: var(--font-color);
+  margin-top: 15px;
+  transition: width 0.15s ease-in-out, height 0.15s ease-in-out;
+  margin-bottom: 50px;
+}
+
+.addCity input {
+  height: 100%;
+  font-size: 24px;
+}
+
+.sidebar-footer {
+  height: 6%;
+  color: #BBBBBB;
+  font-size: 11px;
+}
+
+::-webkit-scrollbar, ::-webkit-scrollbar-corner {
+  background: transparent;
+  height: 12px;
+  width: 12px;
+}
+
+::-webkit-scrollbar-button {
+  height: 0;
+  width: 0;
+}
+
+::-webkit-scrollbar, ::-webkit-scrollbar-corner {
+  background: transparent;
+  height: 12px;
+  width: 12px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: content-box currentColor;
+  border: 2px solid transparent;
+  border-radius: 8px;
+  color: #58585c;
+  min-height: 48px;
+  min-width: 48px;
 }
